logs/dag_id=clean_trash_bucket/run_id=manual__2022-11-30T14:00:21.617373+00:00/task_id=clean_bucket/attempt=58.log
[2022-11-30T19:26:56.588+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: clean_trash_bucket.clean_bucket manual__2022-11-30T14:00:21.617373+00:00 [None]>
[2022-11-30T19:26:56.596+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: clean_trash_bucket.clean_bucket manual__2022-11-30T14:00:21.617373+00:00 [None]>
[2022-11-30T19:26:56.598+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-30T19:26:56.599+0000] {taskinstance.py:1363} INFO - Starting attempt 58 of 58
[2022-11-30T19:26:56.601+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-30T19:26:56.609+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): clean_bucket> on 2022-11-30 14:00:21.617373+00:00
[2022-11-30T19:26:56.615+0000] {standard_task_runner.py:55} INFO - Started process 9485 to run task
[2022-11-30T19:26:56.619+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'clean_trash_bucket', 'clean_bucket', 'manual__2022-11-30T14:00:21.617373+00:00', '--job-id', '366', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/CleanTrashBucket.py', '--cfg-path', '/tmp/tmp6ug21olw']
[2022-11-30T19:26:56.621+0000] {standard_task_runner.py:83} INFO - Job 366: Subtask clean_bucket
[2022-11-30T19:26:56.684+0000] {task_command.py:376} INFO - Running <TaskInstance: clean_trash_bucket.clean_bucket manual__2022-11-30T14:00:21.617373+00:00 [running]> on host 31b8349c3542
[2022-11-30T19:26:56.737+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_EMAIL=***.golovanov@gmail.com
AIRFLOW_CTX_DAG_OWNER=Eugeny Golovanov
AIRFLOW_CTX_DAG_ID=clean_trash_bucket
AIRFLOW_CTX_TASK_ID=clean_bucket
AIRFLOW_CTX_EXECUTION_DATE=2022-11-30T14:00:21.617373+00:00
AIRFLOW_CTX_TRY_NUMBER=58
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-30T14:00:21.617373+00:00
[2022-11-30T19:26:56.749+0000] {base.py:71} INFO - Using connection ID 'Postgres' for task execution.
[2022-11-30T19:26:56.756+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/CleanTrashBucket.py", line 47, in clean_bucket
    cursor.execute(sql_stmt)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 1: ...) VALUES (' DME-MMK_26-08_Evgeniy_Golovanov.pdf ')(' Evgenii...
                                                             ^

[2022-11-30T19:26:56.768+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=clean_trash_bucket, task_id=clean_bucket, execution_date=20221130T140021, start_date=20221130T192656, end_date=20221130T192656
[2022-11-30T19:26:56.775+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.7/site-packages/***/utils/email.py:120: RemovedInAirflow3Warning: Fetching SMTP credentials from configuration variables will be deprecated in a future release. Please set credentials using a connection instead.
  send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)

[2022-11-30T19:26:56.777+0000] {configuration.py:569} WARNING - section/key [smtp/smtp_user] not found in config
[2022-11-30T19:26:56.777+0000] {email.py:229} INFO - Email alerting: attempt 1
[2022-11-30T19:26:56.786+0000] {configuration.py:569} WARNING - section/key [smtp/smtp_user] not found in config
[2022-11-30T19:26:56.787+0000] {email.py:229} INFO - Email alerting: attempt 1
[2022-11-30T19:26:56.789+0000] {taskinstance.py:1914} ERROR - Failed to send email to: ['***.golovanov@gmail.com']
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1457, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1603, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1664, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/CleanTrashBucket.py", line 47, in clean_bucket
    cursor.execute(sql_stmt)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 1: ...) VALUES (' DME-MMK_26-08_Evgeniy_Golovanov.pdf ')(' Evgenii...
                                                             ^


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 2315, in email_alert
    send_email(task.email, subject, html_content)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 72, in send_email
    **kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 120, in send_email_smtp
    send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 231, in send_mime_email
    smtp_conn = _get_smtp_connection(smtp_host, smtp_port, smtp_timeout, smtp_ssl)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 265, in _get_smtp_connection
    else smtplib.SMTP(host=host, port=port, timeout=timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 251, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/local/lib/python3.7/smtplib.py", line 336, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 307, in _get_socket
    self.source_address)
  File "/usr/local/lib/python3.7/socket.py", line 728, in create_connection
    raise err
  File "/usr/local/lib/python3.7/socket.py", line 716, in create_connection
    sock.connect(sa)
OSError: [Errno 99] Cannot assign requested address

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1912, in handle_failure
    self.email_alert(error, task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 2317, in email_alert
    send_email(task.email, subject, html_content_err)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 72, in send_email
    **kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 120, in send_email_smtp
    send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 231, in send_mime_email
    smtp_conn = _get_smtp_connection(smtp_host, smtp_port, smtp_timeout, smtp_ssl)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 265, in _get_smtp_connection
    else smtplib.SMTP(host=host, port=port, timeout=timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 251, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/local/lib/python3.7/smtplib.py", line 336, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 307, in _get_socket
    self.source_address)
  File "/usr/local/lib/python3.7/socket.py", line 728, in create_connection
    raise err
  File "/usr/local/lib/python3.7/socket.py", line 716, in create_connection
    sock.connect(sa)
OSError: [Errno 99] Cannot assign requested address
[2022-11-30T19:26:56.806+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 366 for task clean_bucket (syntax error at or near "("
LINE 1: ...) VALUES (' DME-MMK_26-08_Evgeniy_Golovanov.pdf ')(' Evgenii...
                                                             ^
; 9485)
[2022-11-30T19:26:56.833+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-11-30T19:26:56.850+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
